syntax = "proto3";
package sifnode.faucet.v1;

option go_package = "github.com/sifchain/sifnode/x/faucet/types";

// GenesisState - all faucet state that must be provided at genesis
message GenesisState {}
