syntax = "proto3";
package sifnode.margin.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "sifnode/margin/v1/types.proto";

option go_package = "github.com/Sifchain/sifnode/x/margin/types";

service Query {
  rpc GetMTP(MTPRequest) returns (MTPResponse) {}
  rpc GetPositionsForAddress(PositionsForAddressRequest)
      returns (PositionsForAddressResponse) {}
  rpc GetParams(ParamsRequest) returns (ParamsResponse) {}
}

message MTPRequest {
  string address = 1;
  uint64 id = 2;
}

message MTPResponse { MTP mtp = 1; }

message PositionsForAddressRequest { string address = 1; }

message PositionsForAddressResponse { repeated MTP mtps = 1; }

message ParamsRequest {}

message ParamsResponse {
  Params params = 1;
}